--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -12,37 +12,33 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Set up Ruby with DevKit
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.3
-      - name: Set up Visual Studio Build Tools
-        uses: ilammy/msvc-dev-cmd@v1
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.3'
           bundler-cache: true
       - run: go version
-      - run: choco install rust
-      - run: choco install llvm
+      - run: choco install rust -y
+      - run: choco install llvm -y
       - run: clang -v
-      - run: choco install mingw
+      - run: choco install mingw -y
       - run: gcc --version
-      - run: choco install erlang
-      - run: choco install gnucobol
-      - run: choco install strawberryperl
-      - run: choco install haskell-dev
-      - run: choco install openjdk
-      - run: choco install zig
+      - run: choco install erlang -y
+      - run: choco install gnucobol -y
+      - run: choco install strawberryperl -y
+      - run: choco install haskell-dev -y
+      - run: choco install openjdk -y
+      - run: choco install zig -y
       - run: dotnet --help
-      - run: choco install lua
+      - run: choco install lua -y
       - run: lua -v
-      - run: choco install r
+      - run: choco install r -y
       - run: gem install rspec
       - run: npm install -g typescript
       - run: irm https://deno.land/install.ps1 | iex
         shell: pwsh
       - run: npm install -g bun
-      - name: Run Build Script
-        shell: pwsh
-        run: ruby code\programs\ruby\monorepo_build\build.rb
+      - name: Run build script
+        shell: cmd
+        run: |
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          ruby code\programs\ruby\monorepo_build\build.rb
