--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -12,12 +12,6 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Set up Ruby with DevKit
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.3
-      - name: Set up Visual Studio Build Tools
-        uses: ilammy/msvc-dev-cmd@v1
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.3'
@@ -40,11 +34,10 @@ jobs:
           dotnet --help
           choco install lua
           choco install r
-          gem install rspec
           Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
           refreshenv
           lua -v
           npm install -g typescript
-          irm https://deno.land/install.ps1 | iex
+          npm install -g deno
           npm install -g bun
           ruby code\programs\ruby\monorepo_build\build.rb
