--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -16,6 +16,10 @@ jobs:
         with:
           ruby-version: '3.3'
           bundler-cache: true
+      - name: Set-up OCaml
+        uses: ocaml/setup-ocaml@v3
+        with:
+          ocaml-compiler: 5
       - name: Installing necessary software and running the build script
         shell: pwsh
         run: |
