--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -13,15 +13,6 @@ jobs:
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - run: sudo apt update
-      - name: Set-up OCaml
-        uses: ocaml/setup-ocaml@v3
-        with:
-          ocaml-compiler: 5
-          dune-cache: true
-      - name: Install dune and project deps
-        run: |
-          opam install dune -y
-          eval $(opam env)
       - run: go version
       - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs -y 1
       - run: clang -v
@@ -45,4 +36,6 @@ jobs:
       - run: curl -fsSL https://deno.land/x/install/install.sh | sudo DENO_INSTALL=/usr/local sh
       - run: sudo gem install bundler
       - run: npm install -g bun
+      - run: npm install -g esy
+      - run: esy --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
