Add Support For OCaml (#65)
* Add Support For OCaml In Monorepo

* Forgot to update the scaffolding script for OCaml

* Make sure to install Dune

* Trying to see if running opam env solves the problem

* Shift eval opam env to YAML file

* Attempt to switch to using esy for cross platform OCaml build

* It looks like dune needs to be prefixed with opam. So, attempting to see if that fixes the issue

* Use esy to execute the built command as it is deep inside the container

* Reading the esy docs and attempting a fix from the docs

* Remove no cache flag

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -40,4 +40,6 @@ jobs:
           npm install -g typescript
           npm install -g deno
           npm install -g bun
+          npm install -g esy
+          esy --version
           ruby code\programs\ruby\monorepo_build\build.rb
