--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -36,4 +36,6 @@ jobs:
       - run: curl -fsSL https://deno.land/x/install/install.sh | sudo DENO_INSTALL=/usr/local sh
       - run: sudo gem install bundler
       - run: npm install -g bun
+      - run: npm install -g esy
+      - run: esy --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
