--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -37,4 +37,12 @@ jobs:
       - run: npm install -g bun
       - run: npm install -g esy
       - run: esy --version
+      - name: Install Swiftly & Swift
+        run: |
+          curl -O https://download.swift.org/swiftly/darwin/swiftly.pkg && \
+          installer -pkg swiftly.pkg -target CurrentUserHomeDirectory && \
+          ~/.swiftly/bin/swiftly init --quiet-shell-followup && \
+          . ~/.swiftly/env.sh && \
+          hash -r
+      - run: swift --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
