--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -40,10 +40,10 @@ jobs:
       - run: esy --version
       - name: Install Swiftly & Swift
         run: |
-          curl -O https://download.swift.org/swiftly/darwin/swiftly.pkg && \
-          installer -pkg swiftly.pkg -target CurrentUserHomeDirectory && \
-          ~/.swiftly/bin/swiftly init --quiet-shell-followup && \
-          . ~/.swiftly/env.sh && \
+          curl -O https://download.swift.org/swiftly/linux/swiftly-$(uname -m).tar.gz && \
+          tar zxf swiftly-$(uname -m).tar.gz && \
+          ./swiftly init --quiet-shell-followup && \
+          . ~/.local/share/swiftly/env.sh && \
           hash -r
       - run: swift --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
