Add a check for cmake before we execute build script

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -38,4 +38,5 @@ jobs:
       - run: npm install -g bun
       - run: npm install -g esy
       - run: esy --version
+      - run: cmake --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
