--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -38,4 +38,12 @@ jobs:
       - run: npm install -g bun
       - run: npm install -g esy
       - run: esy --version
+      - name: Install Swiftly & Swift
+        run: |
+          curl -O https://download.swift.org/swiftly/linux/swiftly-$(uname -m).tar.gz && \
+          tar zxf swiftly-$(uname -m).tar.gz && \
+          ./swiftly init --quiet-shell-followup && \
+          . ~/.local/share/swiftly/env.sh && \
+          hash -r
+      - run: swift --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
