--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -37,4 +37,5 @@ jobs:
       - run: npm install -g bun
       - run: npm install -g esy
       - run: esy --version
+      - run: swift --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
