--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -38,6 +38,7 @@ jobs:
       - run: npm install -g bun
       - run: npm install -g esy
       - run: esy --version
+      - run: cmake --version
       - name: Install Swiftly & Swift
         run: |
           curl -O https://download.swift.org/swiftly/linux/swiftly-$(uname -m).tar.gz && \
