--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -42,4 +42,6 @@ jobs:
           npm install -g bun
           npm install -g esy
           esy --version
+          choco install php
+          php -v
           ruby code\programs\ruby\monorepo_build\build.rb
