--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -39,4 +39,6 @@ jobs:
       - run: npm install -g esy
       - run: esy --version
       - run: swift --version
+      - run: brew install php
+      - run: php -v
       - run: ruby code/programs/ruby/monorepo_build/build.rb
