--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -46,4 +46,5 @@ jobs:
           php -v
           choco install composer
           composer -v
+          cmake --version
           ruby code\programs\ruby\monorepo_build\build.rb
