Move to a Ninja backend for cross platform compilation

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -54,4 +54,5 @@ jobs:
           curl -sS https://getcomposer.org/installer | php
           sudo mv composer.phar /usr/local/bin/composer
       - run: composer -v
+      - run: sudo apt-get install ninja-build
       - run: ruby code/programs/ruby/monorepo_build/build.rb
