--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -47,4 +47,6 @@ jobs:
           choco install composer
           composer -v
           cmake --version
+          choco install ninja
+          ninja --version
           ruby code\programs\ruby\monorepo_build\build.rb
