Use CMake To Compile C Code In Windows (#76)
* Use CMake To Compile C Code In Windows

* Move to a Ninja backend for cross platform compilation

* Turn on more warnings

* Attempt a fix for windows build error

* Fix warnings

* Fix up windows build typo

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -46,4 +46,7 @@ jobs:
           php -v
           choco install composer
           composer -v
+          cmake --version
+          choco install ninja
+          ninja --version
           ruby code\programs\ruby\monorepo_build\build.rb
