--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -29,7 +29,9 @@ jobs:
       - run: dotnet --help
       - run: brew install r
       - run: brew install lua
+      - run: brew install luarocks
       - run: lua -v
+      - run: luarocks --version
       - run: brew install powershell/tap/powershell
       - run: gem install rspec
       - run: npm install -g typescript
