--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -32,6 +32,8 @@ jobs:
       - run: brew install luarocks
       - run: lua -v
       - run: luarocks --version
+      - run: luarocks install tl
+      - run: luarocks install cyan
       - run: brew install powershell/tap/powershell
       - run: gem install rspec
       - run: npm install -g typescript
