--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -23,9 +23,10 @@ jobs:
       - run: sudo apt-get install openjdk-17-jdk
       - run: sudo apt-get install openjdk-17-jre
       - run: sudo snap install zig --classic --beta
-      - run: sudo add-apt-repository ppa:dotnet/backports
       - run: sudo apt-get update
-      - run: sudo apt-get install -y dotnet-sdk-9.0
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
       - run: dotnet --help
       - run: sudo apt-get install r-base-core
       - run: sudo apt-get install lua5.4 liblua5.4-dev
