--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -29,8 +29,11 @@ jobs:
           dotnet-version: '9.0.x'
       - run: dotnet --help
       - run: sudo apt-get install r-base-core
-      - run: sudo apt-get install lua5.4 liblua5.4-dev
+      - run: sudo apt-get install lua5.4 liblua5.4-dev luarocks
       - run: lua -v
+      - run: luarocks --version
+      - run: sudo luarocks install tl
+      - run: sudo luarocks install cyan
       - run: sudo snap install powershell --classic
       - run: sudo gem install rspec
       - run: sudo npm install -g typescript
