Add StandardRB To Monorepo Build Script

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -60,4 +60,5 @@ jobs:
       - run: composer -v
       - run: sudo apt-get install ninja-build
       - run: sudo apt-get -y install podman
+      - run: gem install standard
       - run: ruby code/programs/ruby/monorepo_build/build.rb
