--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -53,4 +53,5 @@ jobs:
           cmake --version
           choco install ninja
           ninja --version
+          gem install standard
           ruby code\programs\ruby\monorepo_build\build.rb
