Add Rubocop To Toolchain

--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -57,4 +57,5 @@ jobs:
       - run: cmake --version
       - run: brew install ninja
       - run: ninja --version
+      - run: gem install rubocop --no-document
       - run: ruby code/programs/ruby/monorepo_build/build.rb
