--- a/code/programs/ruby/monorepo_build/BUILD
+++ b/code/programs/ruby/monorepo_build/BUILD
@@ -1,3 +1,4 @@
 ruby test/test_file_processing_history.rb
 ruby test/test_build_context.rb
 ruby test/test_logger.rb
+ruby test/test_standard_stream_log_processor.rb
