--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           ruby-version: '3.3.0'
           bundler-cache: true
+      - run: ruby -v
       - run: go version
       - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs -y 1
       - run: clang -v
