--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           ruby-version: '3.3.0'
           bundler-cache: true
+      - run: ruby -v
       - run: brew install go
       - run: go version
       - run: brew install rust
