--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Installing necessary software and running the build script
         shell: pwsh
         run: |
+          ruby -v
           go version
           choco install rust
           choco install llvm
