--- a/code/programs/ruby/monorepo_build/.rubocop.yml
+++ b/code/programs/ruby/monorepo_build/.rubocop.yml
@@ -1,66 +1,5 @@
 AllCops:
   TargetRubyVersion: 3.3
   NewCops: disable
-
-Style/StringLiterals:
-  Enabled: false
-
-Style/FrozenStringLiteralComment:
-  Enabled: false
-
-Style/MutableConstant:
-  Enabled: false
-
-Style/Next:
-  Enabled: false
-
-Style/MultipleComparison:
-  Enabled: false
-
-Style/MethodCallWithoutArgsParentheses:
-  Enabled: false
-
-Style/RescueStandardError:
-  Enabled: false
-
-Style/GlobalStdStream:
-  Enabled: false
-
-Style/StderrPuts:
-  Enabled: false
-
-Style/Documentation:
-  Enabled: false
-
-Style/TrailingEmptyLines:
-  Enabled: false
-
-Style/MethodLength:
-  Enabled: false
-
-Style/AbcSize:
-  Enabled: false
-
-Style/CyclomaticComplexity:
-  Enabled: false
-
-Style/PerceivedComplexity:
-  Enabled: false
-
-Style/ParameterLists:
-  Enabled: false
-
-Style/MultipleComparison:
-  Enabled: false
-
-Lint/RedundantRequireStatement:
-  Enabled: false
-
-Lint/UnusedBlockArgument:
-  Enabled: false
-
-Naming/AccessorMethodName:
-  Enabled: false
-
-Naming/PredicateName:
-  Enabled: false
+  Exclude:
+    - 'test/**/*'
